v0.2.0: JDK 8 호환 전환 + DB 저장 친화 + 가이드/개발 문서
- release=8: java.net.http→HttpURLConnection, record→불변 클래스, 텍스트블록/isBlank 제거
  (release 플래그가 9+ API 를 컴파일 단계에서 차단 — 전 클래스 major 52 확인)
- Holiday: Serializable + JavaBean 접근자(getDate/getName/isSubstitute) 추가 — ORM/DB 저장 편의,
  기존 record 스타일(date/name/substitute) 유지로 0.1.0 소스 호환
- fetchHolidays throws 에서 InterruptedException 제거 (HttpURLConnection 전환)
- 문서: docs/API_GUIDE.md(설치·레퍼런스·DB 저장 패턴·FAQ), docs/DEVELOPMENT.md(설계·JDK8 금지 API·릴리스 절차)
- 라이브 테스트 정리: placeholder/2027 기준 복원(기본 skip 보장), JDK8 문법

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>